# Ionowatch

./: Makefile.am  Makefile.in  Makeplugins  aclocal.m4  configure  configure.in
block/: Makefile.am  Makefile.in  block.h  conv.c  mmmfile.c  mmmfile.h  rsffile.c  rsffile.h  sbffile.c  sbffile.h  ztdata.h
common/: Makefile.am  Makefile.in  hook.c  hook.h  util.c  util.h  vector.c  vector.h
data/: Makefile.am  Makefile.in  h2pf.mlp  ionowatch.ui  pattern.tag  plasma.mlp  predictor.id3  predictor.mlp  stations.csv
draw/: Makefile.am  Makefile.in  cpi.c  cpi.h  draw.c  draw.h  ega9.h  pixel.h  text.c
gui/: Makefile.am  Makefile.in  callbacks.c  common.c  default_painter.c  dialog.c  filetree.c  glglobe.c  glglobe.h  gui.c  gui.h  guisetup.c  ionogram.c  ionograph.h  main.c  message.c  message.h  mufgraph.c  mufgraph.h  painter.c  painter.h  scaled.c  select.c  tree.h  trig.c  trig.h
libsao/: Makefile.am  Makefile.in  fortran.c  fortran.h  sao.c  sao.h
plugins/: Makefile.am  Makefile.in
plugins/mlpfull/: Makefile.am  Makefile.in  buildtset.c  datafile.c  datafile.h  evaluators.c  evaluators.h  h2pftrainer.c  id3.c  id3.h  id3syntax.c  id3syntax.y  ionotrainer.c  jit.c  jit.h  mlpfull.c  normal.h  pftrainer.c  trainapp.c  trainer.c  trainer.h  trainthread.c  tree.c  tree.h
plugins/mlpfull/mlp/: Makefile.am  Makefile.in  mlp.c  mlp.h  mlpfile.c  mlpfile.h
src/: Makefile.am  Makefile.in  config.h.in  config_files.c  config_files.h  datasource.c  datasource.h  globe.c  globe.h  index.c  index.h  inifile.c  ionogram.c  ionogram.h  ionowatch.h  libini.h  libsim.h  main.c  memfile.c  misc.c  plugin.c  plugin.h  sao2mat.c  sunspot.c  sunspot.h
wbmp/: Makefile.am  Makefile.in  draw.c  layout.h  load.c  save.c  wbmp.h
