AC_PREREQ(2.65)
AC_INIT(ionowatch, 0.1)

AC_CONFIG_HEADERS(src/config.h)
AC_CONFIG_MACRO_DIR([m4])

dnl Todo el churro del automake viene a partir de aquí.
AM_AUTOMAKE_VERSION(1.11.1)
AM_INIT_AUTOMAKE

dnl Interesante para importar CFLAGS del entorno del que se llama.
cflags_were_set=false
if test "${CFLAGS+set}" = set; then
  AM_CFLAGS=$CFLAGS
  CFLAGS=
  cflags_were_set=:
fi


AC_PROG_CC
AM_PROG_CC_C_O
AM_PROG_AS

AC_PROG_YACC
if test -z "${ac_cv_prog_YACC}" ; then
    AC_MSG_ERROR([Build requires bison, byacc or yacc parser generator])
fi

AC_PROG_LIBTOOL
AC_PROG_INSTALL



dnl the following needs to come after the expansion of AC_PROG_CC
if $cflags_were_set; then :; else
  AM_CFLAGS=$CFLAGS
  CFLAGS=
fi

AC_SUBST(AM_CFLAGS)

AC_C_INLINE

if test "$ac_cv_c_inline" != no ; then
  AC_DEFINE([HAVE_INLINE], [0], [This compiler supports inline functions])
  AC_DEFINE(HAVE_INLINE,1)
  AC_SUBST(HAVE_INLINE)
fi

AC_HEADER_TIME

dnl Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_FORK
AC_FUNC_MALLOC

dnl TODO: check for the lowest version number required.
AM_PATH_GTK_2_0([2.16.0],,AC_MSG_ERROR([Gtk+ 2.16.0 or higher required.]))

PKG_CHECK_MODULES(GTKGL, [gtkglext-1.0 >= 1.0.6])
AC_SUBST(GTKGL_CFLAGS)
AC_SUBST(GTKGL_LIBS)


PKG_CHECK_MODULES(GL, [gl >= 7.7.0])
AC_SUBST(GL_CFLAGS)
AC_SUBST(GL_LIBS)

PKG_CHECK_MODULES(GLU, [glu >= 7.7.0])
AC_SUBST(GLU_CFLAGS)
AC_SUBST(GLU_LIBS)

dnl NOTE: m4 doesn't support space between macro name and parentheses
dnl NOTE: it doesn't support spaces between "]" and "," either.

AC_CHECK_LIB([glut], [glutInit], , AC_MSG_ERROR([no suitable glut library found]))
AC_CHECK_HEADER([GL/glut.h],, AC_MSG_ERROR([unable to locate glut development files]))

SDL_VERSION=1.2.5
AM_PATH_SDL($SDL_VERSION,
            :,
            AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)

dnl CFLAGS="$CFLAGS $SDL_CFLAGS"
dnl LIBS="$LIBS $SDL_LIBS"

AC_OUTPUT([
  Makefile
  block/Makefile
  common/Makefile
  data/Makefile
  gui/Makefile
  draw/Makefile
  libsao/Makefile
  plugins/Makefile
  plugins/mlpfull/Makefile
  plugins/mlpfull/mlp/Makefile
  src/Makefile
  wbmp/Makefile
])

